--- a/templates/console/console_list.html.twig
+++ b/templates/console/console_list.html.twig
@@ -8,7 +8,7 @@
     <div class="row">
         {% for console in consoles  %}
             <div class="col-3">
-                <a href="{{ path('consoles_show', {'id' : console.id } ) }}">
+                <a href="{{ path('consoles_show', {'id' : console.id , 'nom' : console.nom} ) }}">
                     <img src="{{ console.image }}" alt="" height="300">
                     <br>
                     <h3>{{ console.nom }}</h3>
